--- a/dashboard.html
+++ b/dashboard.html
@@ -7,28 +7,28 @@
     <meta name="description" content="Situs web REST API yang menyediakan berbagai macam fitur untuk mengembangkan aplikasimu.">
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
     <meta name="author" content="Loli Killers">
-    <title>ARNZ - REST APIs</title>
-    <meta property="og:site_name" name="og:site_name" content="ARNZ APIs">
-    <meta property="og:title" name="og:title" content="ARNZ - REST APIs">
+    <title>SNEAZYBOT - REST APIs</title>
+    <meta property="og:site_name" name="og:site_name" content="SNEAZY APIs">
+    <meta property="og:title" name="og:title" content="SNEAZY - REST APIs">
     <meta property="og:url" name="og:url" content="https://arnz-api.herokuapp.com/">
     <meta property="og:image" name="og:image" content="/static/icon/android-icon-192x192.png">
     <meta property="og:description" name="og:description" content="A REST APIs website that provides a wide variety of features for developers.">
-    <link rel="apple-touch-icon" sizes="57x57" href="https://telegra.ph/file/c793578cfabf67d292dd0.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="https://telegra.ph/file/c793578cfabf67d292dd0.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="https://telegra.ph/file/c793578cfabf67d292dd0.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="https://telegra.ph/file/c793578cfabf67d292dd0.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="https://telegra.ph/file/c793578cfabf67d292dd0.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="https://telegra.ph/file/c793578cfabf67d292dd0.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="https://telegra.ph/file/c793578cfabf67d292dd0.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="https://telegra.ph/file/c793578cfabf67d292dd0.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://telegra.ph/file/c793578cfabf67d292dd0.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="denzhttps://j.top4top.io/p_21264ipll0.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="denzhttps://j.top4top.io/p_21264ipll0.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="denzhttps://j.top4top.io/p_21264ipll0.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="denzhttps://j.top4top.io/p_21264ipll0.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="denzhttps://j.top4top.io/p_21264ipll0.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="denzhttps://j.top4top.io/p_21264ipll0.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="denzhttps://j.top4top.io/p_21264ipll0.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="denzhttps://j.top4top.io/p_21264ipll0.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="denzhttps://j.top4top.io/p_21264ipll0.png">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="192x192" href="https://telegra.ph/file/c793578cfabf67d292dd0.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://telegra.ph/file/c793578cfabf67d292dd0.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="https://telegra.ph/file/c793578cfabf67d292dd0.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://telegra.ph/file/c793578cfabf67d292dd0.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="denzhttps://j.top4top.io/p_21264ipll0.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="denzhttps://j.top4top.io/p_21264ipll0.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="denzhttps://j.top4top.io/p_21264ipll0.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="denzhttps://j.top4top.io/p_21264ipll0.png">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="https://telegra.ph/file/c793578cfabf67d292dd0.png">
+    <meta name="msapplication-TileImage" content="denzhttps://j.top4top.io/p_21264ipll0.png">
     <meta name="theme-color" content="#ffffff">
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -43,7 +43,7 @@
       <div class="sidebar-wrapper">
         <div class="logo">
           <a href="javascript:void(0)" class="simple-text logo-mini">
-            ARNZ
+            SNEAZY
           </a>
           <a href="javascript:void(0)" class="simple-text logo-normal">
             Rest Api's
@@ -96,7 +96,7 @@
           <li>
             <a href="https://github.com/LoliKillers">
             <i class="tim-icons icon-pencil"></i>
-            <p>Loli Killers</p>
+            <p>Sneazy</p>
             </a>
           </li>
         </ul>
@@ -182,13 +182,14 @@
                       <tr>
                       <p> Allah SWT</p>
                       <p> My Perents</p>
-                      <p> Loli Killers (i am)</p>
+                      <p> X - MRG3P5</p>
+                      <p> Loli Killers</p>
                       <p> Rynz</p>
                       <p> Nyz</p>
                       <p> Zhirrr</p>
+                      <p> Leyscoders Team</p>
                       <p> Creative Time</p>
-                      <p> Arnz Tim</p>
-                      <p> ALL HUMAN</p>
+                      <p> LOLHUMAN</p>
 						</tr>
                     </tbody>
                   </table>
@@ -222,7 +223,7 @@
             <script>
               document.write(new Date().getFullYear())
             </script>2021 made with <i class="tim-icons icon-heart-2"></i> by
-            <a href="javascript:void(0)" target="_blank">Loli Killers</a> for a better web.
+            <a href="javascript:void(0)" target="_blank">Sneazy</a> for a better web.
           </div>
         </div>
       </footer>
@@ -253,9 +254,9 @@
         </li>
         <li class="button-container">
           <a class="text-center">Contact Me</a>
-          <a href="https://wa.me/6285852203076?text=Hallo%20bang" target="_blink" class="btn btn-success btn-block btn-round">Whatsapp</a>
-          <a href="https://t.me/Loli_Killers" target="_blink" class="btn btn-info btn-block btn-round">Telegram</a>
-          <a href="https://instagram.com/ariasu_62" target="_blink" class="btn btn-primary btn-block btn-round">Instagram</a>
+          <a href="https://wa.me/6285732415700?text=Hallo%20bang" target="_blink" class="btn btn-success btn-block btn-round">Whatsapp</a>
+          <a href="https://t.me/Sneazy" target="_blink" class="btn btn-info btn-block btn-round">Telegram</a>
+          <a href="https://instagram.com/ardynvyn__" target="_blink" class="btn btn-primary btn-block btn-round">Instagram</a>
         </li>
       </ul>
     </div>
